[gd_scene load_steps=10 format=2]

[ext_resource path="res://info.png" type="Texture" id=1]
[ext_resource path="res://Insanibu.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://play.png" type="Texture" id=3]
[ext_resource path="res://exit.png" type="Texture" id=4]
[ext_resource path="res://scripts/MainScreen.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 7
outline_color = Color( 0.12549, 0.12549, 0.12549, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 160
outline_size = 10
outline_color = Color( 0.12549, 0.12549, 0.12549, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 90
outline_size = 10
outline_color = Color( 0.12549, 0.12549, 0.12549, 1 )
font_data = ExtResource( 2 )

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.431373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clear_progress" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.478431 )
margin_right = 412.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "CLEAR PROGRESS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
modulate = Color( 0.972549, 0.0980392, 0.0980392, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -508.0
margin_top = 376.0
margin_right = 508.0
margin_bottom = 510.0
rect_pivot_offset = Vector2( 994.412, 56 )
custom_fonts/font = SubResource( 1 )
text = "Level 1 of infinity"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -463.0
margin_top = 172.0
margin_right = 463.0
margin_bottom = 350.0
rect_pivot_offset = Vector2( 994.412, 56 )
custom_fonts/font = SubResource( 2 )
text = "WALL MATCH"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.415686 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="TextureButton" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 100, 100 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_button" type="TextureButton" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -432.0
margin_top = -100.0
margin_right = -232.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 100, 100 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info_button" type="TextureButton" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 236.0
margin_top = -100.0
margin_right = 436.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 100, 100 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 0.623529 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -463.0
margin_top = -89.0
margin_right = 463.0
margin_bottom = 89.0
rect_pivot_offset = Vector2( 994.412, 56 )
custom_fonts/font = SubResource( 4 )
text = "Developer:
Adnan Bogilovic
@Byteblast"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="clear_progress" to="." method="_on_clear_progress_pressed"]
[connection signal="pressed" from="Panel/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Panel/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Panel/info_button" to="." method="_on_info_button_pressed"]
